<?xml version="1.0" encoding="utf-8"?>
<!--   Copyright 2013 Handpoint

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
		android:key="merchant_email" 
		android:title="@string/merchant_email_user"
		android:persistent="true"
		android:inputType="textEmailAddress"
	/>
    <EditTextPreference
		android:key="merchant_email_pswd" 
		android:title="@string/merchant_email_pswd"
		android:persistent="true"
		android:inputType="textPassword"
	/>
    <EditTextPreference
		android:key="merchant_email_host" 
		android:title="@string/merchant_email_host"
		android:persistent="true"
		android:inputType="textUri"
	/>
    <EditTextPreference
		android:key="merchant_email_port" 
		android:title="@string/merchant_email_port"
		android:persistent="true"
		android:inputType="number"
	/>
	<ListPreference
		android:key="supported_protocol"
		android:title="@string/merchant_email_protocol"
		android:dialogTitle="@string/merchant_email_protocol"
		android:entries="@array/supported_protocols_titles"
		android:entryValues="@array/supported_protocols_values"
		android:defaultValue="2"
	/>
</PreferenceScreen>
