<?xml version="1.0" encoding="utf-8"?>
<!--   Copyright 2013 Handpoint

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:id="@+id/rootLayout">

	<include layout="@layout/lcd_panel"/>

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
		android:gravity="center_vertical"
		android:layout_weight="0.11"
		android:focusable="true"
		android:focusableInTouchMode="true"
	>

		<EditText style="@style/DescriptionInput"
		    	android:id="@+id/description_input"
		    	android:background="@drawable/edit_underline_orange"
				android:hint="@string/description"
				android:imeOptions="actionDone"
				android:singleLine="true"
				android:gravity="center_vertical|left"
				android:layout_alignBottom="@+id/camera_button"
		/>

		<ImageButton style="?android:attr/borderlessButtonStyle"
		    	android:id="@id/camera_button"
		    	android:src="@drawable/icon_camera"
				android:background="@drawable/icon_camera_selector"
				android:contentDescription="@string/take_photo"
				android:adjustViewBounds="true"
				android:scaleType="fitXY"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_margin="5dp"
				android:padding="2dp"
	    />
	</RelativeLayout>

	<ImageView
	    	android:id="@+id/divider" 
			android:background="@drawable/divider"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	/>

	<Button style="@style/OrangeButtonStyle"
		android:id="@+id/pay_button"
		android:background="@drawable/button_orange_selector"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="0.14"
	/>

	<TableLayout android:id="@+id/tableLayout1" 
		android:layout_width="fill_parent" 
		android:layout_height="0dp"
		android:stretchColumns="*"
		android:layout_gravity="center_vertical"
		android:layout_weight="0.47"
	>
		<TableRow android:id="@+id/tableRow1" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_weight="0.25"
		>
				<Button style="@style/NumpadButtonsTextStyle"
				    android:id="@+id/button1"
				    android:text="@string/button_1"
					android:background="@drawable/button_1_selector"
					android:layout_width="0dp" 
					android:layout_height="fill_parent"
					android:layout_weight="1"
				>
				</Button>
				<Button style="@style/NumpadButtonsTextStyle" 
					android:id="@+id/button2"
					android:text="@string/button_2"
					android:background="@drawable/button_2_selector" 
					android:layout_width="0dp" 
					android:layout_height="fill_parent"
					android:layout_weight="1"
				>
				</Button>
				<Button style="@style/NumpadButtonsTextStyle" 
					android:id="@+id/button3"
					android:text="@string/button_3"
					android:background="@drawable/button_3_selector" 
					android:layout_width="0dp" 
					android:layout_height="fill_parent"
					android:layout_weight="1"
				>
				</Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_weight="0.25"
		>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button4"
				android:text="@string/button_4"
				android:background="@drawable/button_4_selector"
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
			<Button style="@style/NumpadButtonsTextStyle"
			    android:id="@+id/button5"
			    android:text="@string/button_5" 
			    android:background="@drawable/button_5_selector"
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button6"
				android:text="@string/button_6"
				android:background="@drawable/button_6_selector" 
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_weight="0.25"
		>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button7"
				android:text="@string/button_7"
				android:background="@drawable/button_7_selector" 
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button8" 
				android:text="@string/button_8"
				android:background="@drawable/button_8_selector"
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button9"
				android:text="@string/button_9"
				android:background="@drawable/button_9_selector" 
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
			>
			</Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow4" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_weight="0.25"
		>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button00"
				android:text="@string/button_00"
				android:background="@drawable/button_00_selector"
				android:layout_width="0dp" 
				android:layout_height="fill_parent"			     
				android:layout_weight="1"
			>
			</Button>
			<Button style="@style/NumpadButtonsTextStyle"
				android:id="@+id/button0"
				android:text="@string/button_0"
				android:background="@drawable/button_0_selector" 
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
			/>
			<ImageButton
		    	android:id="@+id/buttonDel"
		    	android:src="@drawable/icon_del"
		    	android:background="@drawable/button_del_selector" 
				android:layout_width="0dp" 
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:padding="0dp"
				android:layout_margin="0dp"
	    	/>
			
		</TableRow>
	</TableLayout>
	
</LinearLayout>
