<?xml version="1.0" encoding="UTF-8"?>
<!--   Copyright 2013 Handpoint

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/pin_old_view_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/edit_old_password_label"
        android:textStyle="bold"
        android:textColor="@android:color/secondary_text_dark"
        android:visibility="gone" 
    />
    <EditText
        android:id="@+id/pin_old_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
		android:inputType="textPassword|number"
		android:password="true"
		android:numeric="integer"
		android:maxLength="4"
        android:visibility="gone" 
    />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/edit_password_label"
        android:textStyle="bold"
        android:textColor="@android:color/secondary_text_dark"
    />
    <EditText
        android:id="@+id/pin_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
		android:inputType="textPassword|number"
		android:password="true"
		android:numeric="integer"
		android:maxLength="4"
    />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/edit_password2_label"
        android:textStyle="bold" 
        android:textColor="@android:color/secondary_text_dark"
    />
    <EditText
        android:id="@+id/pin2_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
		android:inputType="textPassword|number"
		android:password="true"
		android:numeric="integer"
		android:maxLength="4"
    />
</LinearLayout>